2010-07-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix support for `break' in MT-Alpha code generation.

	* tools/lib/slc/mtalpha/visitors.py (TFun_2_MTATFun.visit_break):
	Do not use `__builtin_unreachable' since we are not yet using GCC
	4.5.

2010-07-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor SEP initialization updates.

	* lib/src/mtsep.c: Notify progress for each core. Properly report
	the existence of the first place.

2010-07-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for new performance counters.

	* lib/include/svp/perf.h: New counter for exclusive allocate queue
	size.
	* lib/src/perf.c: Name the new counter. Also compute average.

2010-07-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reinstate support for MT family IDs.

	* tools/lib/t-spr/slimpl.m4 (sl_create),
	* tools/lib/slc/ast.py (Create.__init__),
	* tools/lib/slc/input/parse.py (parse_create): Propagate the FID lvalue.

	* tools/lib/slc/lower/lowercreate.py
	(Create_2_LowCreate.visit_create): Define the FID temporary here
	and assign the FID lvalue in the body always.

	* tools/lib/slc/mtalpha/visitors.py
	(Create_2_MTACreate.visit_lowcreate): Use it.

2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More resource deadlock prevention.

	* tools/include/svp/delegate.h: Make the default place identifier
	`soft' to prevent resource deadlocks.
	* tools/lib/slc/mtalpha/visitors.py
	(Create_2_MTACreate.visit_lowcreate): Force suspend bit when
	creating with no `seq' alternative.

2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for new performance counters.

	* lib/include/svp/perf.h: New counters for TT and FT occupancy.
	* lib/src/perf.h: Name the new counters. Also support computer
	columns.

2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in `spr'.

	* tools/lib/slc/lower/seq.py (TFun_2_CFun): Fix support for thread
	function pointer declarations.

2010-07-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>
