@@ -355,33 +355,43 @@ class TFun_2_MTATFun(DefaultVisitor):
         return newitems
 
     def visit_getp(self, getp):
-        if getp.name in self.gllist_mutable:
-            return flatten(getp.loc, ' __slPwg_%s ' % getp.name)
-        elif getp.name in self.shlist:
-            name = getp.name
+        name = getp.name
+        if name in self.shlist:
+            if getp.decl.type == 'shfparm':
+                regtype = 'f'
+            else:
+                regtype = 'r'
             return flatten(getp.loc, 
                            '({'
                            '__asm__ __volatile__("# MT: read shared %(name)s (%%0)"'
-                           '  : "=rf"(__slPsin_%(name)s)'
+                           '  : "=%(regtype)s"(__slPsin_%(name)s)'
                            '  : "0"(__slPsin_%(name)s));'
                            '__slPsin_%(name)s;'
                            '})'
                            % locals())
-        elif getp.name in self.gllist_mem:
-            return flatten(getp.loc, "(__slPgm->%s)" % getp.name)
+        elif name in self.gllist_mutable:
+            return flatten(getp.loc, ' __slPwg_%s ' % name)
+        elif name in self.gllist_mem:
+            return flatten(getp.loc, "(__slPgm->%s)" % name)
         else: # normal global
-            assert getp.name in self.gllist
-            return flatten(getp.loc, " __slPg_%s " % getp.name)
+            assert name in self.gllist
+            return flatten(getp.loc, " __slPg_%s " % name)
 
     def visit_setp(self, setp):
         rhs = setp.rhs.accept(self)
-        if setp.name in self.shlist:
-            name = setp.name
+        name = setp.name
+        if name in self.shlist:
+            if setp.decl.type == 'shfparm':
+                regtype = 'f'
+                itype = 'f'
+            else:
+                regtype = 'r'
+                itype = ''
             b = []
             b.append(flatten(setp.loc, 
                              'do {'
                              ' __asm__ __volatile__("# MT: clobber incoming %(name)s (%%0)"'
-                             ' : "=rf"(__slPsin_%(name)s) '
+                             ' : "=%(regtype)s"(__slPsin_%(name)s) '
                              ' : "0"(__slPsin_%(name)s));'
                              ' __typeof__(__slPsout_%(name)s) __tmp_set_%(name)s = ('
                              % locals()))
@@ -389,17 +399,17 @@ class TFun_2_MTATFun(DefaultVisitor):
             b.append(flatten(setp.loc, 
                              ');'
                              ' __asm__ __volatile__("# MT: start write shared %(name)s (%%0)"'
-                             ' : "=rf"(__slPsout_%(name)s) : "0"(__slPsout_%(name)s));'
-                             ' __asm__ __volatile__("mov %%4, %%0\\t# MT: write shared %(name)s (%%0)"'
-                             ' : "=rf" (__slPsout_%(name)s), "=rf" (__slPsin_%(name)s)'
+                             ' : "=%(regtype)s"(__slPsout_%(name)s) : "0"(__slPsout_%(name)s));'
+                             ' __asm__ __volatile__("%(itype)smov %%4, %%0\\t# MT: write shared %(name)s (%%0)"'
+                             ' : "=%(regtype)s" (__slPsout_%(name)s), "=%(regtype)s" (__slPsin_%(name)s)'
                              ' : "0"(__slPsout_%(name)s), "1" (__slPsin_%(name)s), '
-                             '   "rf" (__tmp_set_%(name)s));'
+                             '   "%(regtype)s" (__tmp_set_%(name)s));'
                              '} while(0)'
                              % locals()))
             return b
         else:
-            assert setp.name in self.gllist_mem or setp.name in self.gllist
-            return flatten(setp.loc, "#error invalid set to global %s\n" % setp.name)
+            assert name in self.gllist_mem or name in self.gllist
+            return flatten(setp.loc, "#error invalid set to global %s\n" % name)
 
     def visit_break(self, br):
         return flatten(br.loc, 
