@@ -1,5 +1,13 @@
 2010-07-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Fix bug in MT-Alpha code generation.
+
+	* tools/lib/slc/mtalpha/visitors.py (TFun_2_MTATFun.visit_setp)
+	(TFun_2_MTATFun.visit_getp): Properly segregate accesses to int
+	and float registers to protect from bug in GCC.
+
+2010-07-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Fix support for `break' in MT-Alpha code generation.
 
 	* tools/lib/slc/mtalpha/visitors.py (TFun_2_MTATFun.visit_break):
